day 9 part 2 also generalized the code so it works for both parts

--- a/9/package.json
+++ b/9/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "a": "ts-node a.ts"
+    "rope": "ts-node 9.ts"
   },
   "keywords": [],
   "author": "",
